Trocando imagens e estilizando animações no menu e nas notícias

--- a/site-fhc/src/ui/components/geral/style/header/Header.css
+++ b/site-fhc/src/ui/components/geral/style/header/Header.css
@@ -45,10 +45,12 @@ li{
 header ul li {
     position: relative;
     border-right: rgba(128, 128, 128, 0.91);
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-/* header ul a:not(.btn)::after{
+header ul a:not(.btn)::after{
     content: "";
     background-color: #020381;
     height: 3px;
@@ -56,11 +58,12 @@ header ul li {
     display: block;
     margin: 0 auto;
     transition: 0.3s;
+    border-radius: 5px;
 }
 
 header ul a:hover::after{
-    width: 100%;
-} */
+    width: 70%;
+}
 
 .link{
     color: rgb(16, 16, 16);
@@ -78,6 +81,7 @@ header ul a:hover::after{
     font-weight: 700;
     border-radius: 2px;
     color: #020381 ;
+    transition: 0.3s;
 }
 
 .active-page{
