--- a/site-fhc/src/index.css
+++ b/site-fhc/src/index.css
@@ -12,17 +12,17 @@ body {
 }
 
 body::-webkit-scrollbar {
-  width: 7px;               /* width of the entire scrollbar */
+  width: 7px;               
 }
 
 body::-webkit-scrollbar-track {
-  background: #c4c4c615;        /* color of the tracking area */
+  background: #c4c4c615;        
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #cacacb;    /* color of the scroll thumb */
-  border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 0px solid orange;  /* creates padding around scroll thumb */
+  background-color: #cacacb;    
+  border-radius: 20px;       
+  border: 0px solid orange;
 }
 
 code {
