--- a/site-fhc/src/ui/components/home/style/noticias/Noticias.css
+++ b/site-fhc/src/ui/components/home/style/noticias/Noticias.css
@@ -33,19 +33,22 @@
     padding: 20px;
     text-align: justify;
     max-width: 400px;
+    min-height: 500px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.089), 0 6px 20px 0 rgba(0, 0, 0, 0.105);
     border-radius: 9px;
     transition: all 3s ease-in-out;
 }
 
-.container-noticia-home:hover {
-    margin-top: -20px;
-    background-color: #2323236c;
-    color: #F6F6F6;
-}
+@media only screen and (min-width: 1238px){
+    .container-noticia-home:hover {
+        margin-top: -20px;
+        background-color: #020381;
+        color: #F6F6F6;
+    }
 
-.container-noticia-home:hover h3{
-    color: #F6F6F6;
+    .container-noticia-home:hover h3{
+        color: #F6F6F6;
+    }
 }
 
 .container-noticia-home h3{
